--- a/extensions_additional.conf
+++ b/extensions_additional.conf
@@ -1,1 +1,75 @@
+#END POINT
 
+[6001]
+type=endpoint
+context=default
+disallow=all
+allow=ulaw
+auth=6001
+aors=6001
+transport=transport-udp
+direct_media=no
+rtp_symmetric=yes
+force_rport=yes
+rewrite_contact=yes
+aggregate_mwi=yes
+use_avpf=no
+ice_support=no
+media_encryption=no
+media_encryption_optimistic=no
+media_use_received_transport=no
+timers=yes
+timers_min_se=90
+timers_sess_expires=1800
+callerid="User 6001" <6001>
+callerid_privacy=allowed_not_screened
+callerid_tag=
+100rel=yes
+send_diversion=yes
+send_pai=yes
+send_rpid=yes
+language=en
+tone_zone=us
+t38_udptl=no
+fax_detect=no
+t38_udptl_ec=none
+t38_udptl_maxdatagram=400
+t38_udptl_nat=no
+t38_udptl_ipv6=no
+
+# Authentication
+
+[6001]
+type=auth
+auth_type=userpass
+password=yourpassword  ; Replace with a strong password
+username=6001
+realm=asterisk
+nonce_lifetime=32
+
+#AOR
+
+[6001]
+type=aor
+max_contacts=5
+remove_existing=yes
+maximum_expiration=7200
+minimum_expiration=60
+qualify_frequency=60
+authenticate_qualify=no
+outbound_proxy=
+support_path=no
+
+#Transport
+
+[transport-udp]
+type=transport
+protocol=udp
+bind=0.0.0.0
+local_net=192.168.1.0/24  ; Replace with your local network
+external_media_address=203.0.113.1  ; Replace with your external IP
+external_signaling_address=203.0.113.1  ; Replace with your external IP
+allow_reload=yes
+tos=cs3
+cos=3
+symmetric_transport=no
