--- a/PJSIP_WebRTC_extension.conf
+++ b/PJSIP_WebRTC_extension.conf
@@ -1,1 +1,18 @@
-
+[6001]
+type=endpoint
+...
+transport=transport-wss ; Use WebSocket transport
+context=default
+disallow=all
+allow=opus,ulaw ; Opus is commonly used with WebRTC
+aors=6001
+auth=6001
+dtls_auto_generate_cert=yes
+webrtc=yes ; WebRTC support
+media_encryption=dtls ; DTLS-SRTP for encryption
+dtls_verify=fingerprint
+dtls_setup=actpass
+ice_support=yes ; Interactive Connectivity Establishment
+use_avpf=yes
+media_use_received_transport=yes
+rtcp_mux=yes
